refactor: Replace List.of() with Collections.emptyList() for improved readability in PoolClientService and TeamClientService